# wordle-cli

./: .gitignore  README.md  product_requirements_doc.md  pyproject.toml
src/wordle/: cli.py  datastore.yaml  i_repository.py  local_file_storage_repository.py  results.yaml  wordle.py  wordle_results.py
src/wordle/data/: results.yaml
tests/wordle/: cli_test.py  datastore.yaml  local_file_storage_repository_test.py  results.yaml  wordle_test.py
